# grammar-correction

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/grammar_correction/: __init__.py  dataset.py  evaluation.py  inference.py  model.py  optimizer.py  trainer.py  utils.py
tests/: test_dataset.py  test_model.py
